--- a/.env.sample.nfsn
+++ b/.env.sample.nfsn
@@ -8,6 +8,7 @@ GIT_LOCAL_DIR=/home/protected/database-backup
 USERIMAGE_DIR=/home/protected/userimage
 GEM_HOME=/home/protected/.gem
 GEM_PATH=/home/protected/.gem
+TMPDIR=/home/protected/tmp
 RACK_ENV=deployment
 PORT=5000
 ADDR=0.0.0.0
