Alleviate constant container restarts during dev
Previously we used COPY to put our code into the container when building
it. That meant every little code change required the container to be
rebuilt. Now the whole workspace is shared to the container as a
volume. Still need to restart Ruby when .rb files have changed, but it's
a LOT faster than running bundle install all over again every time.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,10 +1,12 @@
 version: "2"
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile-dev
     ports:
       - "5000:5000"
     volumes:
-      - ./data:/data
+      - .:/massikone
     env_file:
       - .env
