Add TMPDIR for NearlyFreeSpeech.net
Ruby doesn't want to use their default TMPDIR (/home/tmp/) for some
reason. Perhaps permission problems (sticky bit?)

--- a/.env.sample.nfsn
+++ b/.env.sample.nfsn
@@ -5,5 +5,6 @@ GOOGLE_CLIENT_SECRET=
 DATABASE_URL=sqlite:///home/protected/database/database.sqlite
 GEM_HOME=/home/protected/.gem
 GEM_PATH=/home/protected/.gem
+TMPDIR=/home/protected/tmp
 RACK_ENV=deployment
 PORT=5000
