--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -5,7 +5,7 @@ EXPOSE 5000
 
 ENV BUNDLE_WITHOUT=mysql:pg
 ENV RACK_ENV=deployment
-ENV DATABASE_URL=sqlite:///massikone/data/massikone.sqlite
+ENV DATABASE_URL=sqlite:///massikone/data/massikone.db
 
 RUN apk add --update imagemagick build-base sqlite-dev
 RUN echo "gem: --no-rdoc --no-ri" > /etc/gemrc
