--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,7 +4,7 @@ VOLUME /massikone
 EXPOSE 5000
 
 ENV BUNDLE_WITHOUT=mysql:pg
-ENV RACK_ENV=deployment
+ENV RACK_ENV=development
 ENV DATABASE_URL=sqlite:///massikone/data/massikone.db
 
 RUN apk add --update imagemagick build-base sqlite sqlite-dev
