Combine dev and prod Dockerfiles
Use docker-compose to differentiate between dev and prod. (Dev is now just like
prod, except that app source code is mounted as a volume instead of copied.)
The SQLite database has been moved inside the image from /data to
/massikone/data to make it easier to accommodate both dev and prod in the same
image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./data:/data
+      - ./data:/massikone/data
     env_file:
       - .env
+    environment:
+      DATABASE_URL: "sqlite:///massikone/data/massikone.db"
