--- a/.env.sample.nfsn
+++ b/.env.sample.nfsn
@@ -1,7 +1,7 @@
 SESSION_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-DATABASE_URL=sqlite:///home/protected/database/database.sqlite
+DATABASE_URL=sqlite:///home/protected/database/database.db
 GEM_HOME=/home/protected/.gem
 GEM_PATH=/home/protected/.gem
 TMPDIR=/home/protected/tmp
